# video-converter

./: .gitignore  Cargo.toml  README.md  build.rs  dev-hack.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
android/: install.sh  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/deft/: DeftActivity.java  InputView.java
android/app/src/main/java/deft_app/: MainActivity.java
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
src/: ext_ffmpeg.rs  ffmpeg_util.rs  main.rs
ui/: app-store.ts  app.css  app.tsx  deft-env.d.ts  env.d.ts  main.ts
ui/components/: task-status-icon.tsx
ui/util/: file-util.ts  proxy-util.ts
