[package]
name = "video-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
deft = { version = "0.10.2", features = ["dialog"] }
ffmpeg-next = "7.1.0"
serde = { version = "1.0.213", features = ["derive"] }

[build-dependencies]
deft-build = { version = "0.2.0" }

[features]
tray = ["deft/tray"]

#[lib]
#name = "deftapp"
#path = "src/main.rs"
#crate-type=["cdylib"]